--- a/views/image.ejs
+++ b/views/image.ejs
@@ -4,6 +4,7 @@
   <title>Image Converter</title>
   <link rel="stylesheet" href="converter_page.css">
   <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="common.js" defer></script>
 </head>
 
